Changes with Apache 1.3.15

  *) Move the check of the Expect request header field after the hook
     for ap_post_read_request, since that is the only opportunity for
     modules to handle Expect extensions.
     [Justin Erenkrantz <jerenkrantz@eBuilt.com>]

  *) Each Netware thread is created in its own thread group to ensure 
     that any context change applies only to the thread in which the 
     change was made.  [Brad Nicholes <BNICHOLES@novell.com>]

  *) Relax the syntax checking of Host: headers in order to support
     iDNS. PR#6635 [Tony Finch]

  *) Fix Content-Length calculation when doing Range header processing.
     This makes PDF byteserving work again. PR#6711 [Tony Finch]

  *) Link with libresolv on UnixWare 7 so that PHP works.
     PR#6780 [Larry Rosenman <ler@lerctr.org>]

  *) Linux 2.2.x and later do not need a serialised single listener,
     and sysv semaphores scale better than fcntl.  Updated GuessOS
     to distinguish 2.0.x from 2.2.x -- 2.0.x will still use fcntl.
     [Andrew Morton <andrewm@uow.edu.au>, Dean Gaudet]

  *) Eliminate caching problems of mod_autoindex results, so the last
     modified date of the directory is returned as the Last-Modified 
     and ETag HTTP header tags are sent if IndexOptions TrackModified
     directive/option is used. [William Rowe]

  *) Corrected file path arguments from server conf directives to
     their canonical form (excluding OS2 - which uses alternate 
     logic.)  Resolves a long list of PRs reporting that Win32 paths
     of the syntax x:\foo were mis-concatinated to the server root.
     [William Rowe]

  *) Correct an issue with Alias and ScriptAlias directives that 
     file path arguments were not normalized in canonical form.
     This correction makes no attempt to normalize regular expression
     forms of Alias or ScriptAlias.  [William Rowe]

  *) Add a new LogFormat directive, %c, that will log connection
     status at the end of the response as follows: